[gd_scene load_steps=6 format=2]

[ext_resource path="res://OdibeeSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/MarginButtons/PauseScreen/PauseScreen.gd" type="Script" id=2]
[ext_resource path="res://BasicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Game/MarginButtons/CanvasItemMaterial.tres" type="Material" id=4]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.152941, 0.278431, 0.4, 1 )
extra_spacing_top = 4
extra_spacing_bottom = 4
extra_spacing_char = 3
extra_spacing_space = 10
font_data = ExtResource( 1 )

[node name="PauseScreen" type="Control"]
pause_mode = 2
margin_left = 56.0
margin_right = 208.0
margin_bottom = 144.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.113725, 0.113725, 0.780392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -108.0
margin_right = 64.0
margin_bottom = 108.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
material = ExtResource( 4 )
margin_top = 41.0
margin_right = 128.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
text = "Pause menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 69.0
margin_right = 128.0
margin_bottom = 177.0
custom_constants/separation = 4

[node name="Resume" type="Button" parent="VBoxContainer/Buttons"]
material = ExtResource( 4 )
margin_right = 128.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Resume"

[node name="Restart" type="Button" parent="VBoxContainer/Buttons"]
material = ExtResource( 4 )
margin_top = 28.0
margin_right = 128.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Restart level"

[node name="Lobby" type="Button" parent="VBoxContainer/Buttons"]
material = ExtResource( 4 )
margin_top = 56.0
margin_right = 128.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 3 )
text = "Back to lobby"

[node name="Quit" type="Button" parent="VBoxContainer/Buttons"]
material = ExtResource( 4 )
margin_top = 84.0
margin_right = 128.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 3 )
text = "Quit game"

[node name="ConfirmQuit" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 128.0
margin_bottom = 174.0
custom_constants/separation = 6

[node name="Tabs" type="Tabs" parent="VBoxContainer/ConfirmQuit"]
visible = false
margin_right = 128.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/ConfirmQuit"]
material = ExtResource( 4 )
margin_right = 128.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
text = "Are you sure do you want
to quit?"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/ConfirmQuit"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 45.0
margin_right = 128.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 3 )
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer/ConfirmQuit"]
margin_top = 79.0
margin_right = 128.0
margin_bottom = 103.0
custom_constants/separation = 15
alignment = 1

[node name="No" type="Button" parent="VBoxContainer/ConfirmQuit/Buttons"]
material = ExtResource( 4 )
margin_left = 27.0
margin_right = 53.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "No"

[node name="Yes" type="Button" parent="VBoxContainer/ConfirmQuit/Buttons"]
material = ExtResource( 4 )
margin_left = 68.0
margin_right = 100.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Yes"

[connection signal="button_up" from="VBoxContainer/Buttons/Resume" to="." method="button_pressed"]
[connection signal="button_up" from="VBoxContainer/Buttons/Resume" to="." method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="VBoxContainer/Buttons/Restart" to="." method="button_pressed"]
[connection signal="button_up" from="VBoxContainer/Buttons/Restart" to="." method="_on_Restart_button_up"]
[connection signal="button_up" from="VBoxContainer/Buttons/Lobby" to="." method="button_pressed"]
[connection signal="button_up" from="VBoxContainer/Buttons/Lobby" to="." method="_on_LobbyButton_button_up"]
[connection signal="button_up" from="VBoxContainer/Buttons/Quit" to="." method="button_pressed"]
[connection signal="button_up" from="VBoxContainer/Buttons/Quit" to="." method="_on_QuitButton_button_up"]
[connection signal="button_up" from="VBoxContainer/ConfirmQuit/Buttons/No" to="." method="button_pressed"]
[connection signal="button_up" from="VBoxContainer/ConfirmQuit/Buttons/No" to="." method="_on_No_button_up"]
[connection signal="button_up" from="VBoxContainer/ConfirmQuit/Buttons/Yes" to="." method="button_pressed"]
[connection signal="button_up" from="VBoxContainer/ConfirmQuit/Buttons/Yes" to="." method="_on_Yes_button_up"]
